--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "selectn",
   "author": "Wil Moore III <wil.moore@wilmoore.com>",
-  "description": "Select n-levels deep into an object by providing a dot/bracket-notation query string.",
+  "description": "N-levels deep object access via dot/bracket-notation property access string.",
   "version": "0.2.3",
   "keywords": [
     "object",
@@ -10,7 +10,6 @@
     "deep",
     "nested",
     "predicate",
-    "functional",
     "functor"
   ],
   "main": "./index",
