support `jam` and `volo`

--- a/package.json
+++ b/package.json
@@ -25,5 +25,11 @@
   "devDependencies": {
     "mocha": "*",
     "chai": "*"
+  },
+  "jam": {
+    "include": [ "selectn.js", "Readme.md" ],
+  },
+  "volo": {
+    "url": "https://raw.github.com/wilmoore/selectn/{version}/selectn.js"
   }
 }
