correct package.json extra comma

--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "chai": "*"
   },
   "jam": {
-    "include": [ "selectn.js", "Readme.md" ],
+    "include": [ "selectn.js", "Readme.md" ]
   },
   "volo": {
     "url": "https://raw.github.com/wilmoore/selectn/{version}/selectn.js"
