--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "selectn",
   "author": "Wil Moore III <wil.moore@wilmoore.com>",
   "description": "N-levels deep object access via dot/bracket-notation property access string.",
-  "version": "0.8.0",
+  "version": "0.8.2",
   "keywords": [
     "object",
     "property",
@@ -27,7 +27,10 @@
     "chai": "*"
   },
   "jam": {
-    "include": [ "selectn.js", "Readme.md" ]
+    "include": [
+      "selectn.js",
+      "Readme.md"
+    ]
   },
   "volo": {
     "url": "https://raw.github.com/wilmoore/selectn/v{version}/selectn.js"
