--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
   "devDependencies": {
     "mocha": "*",
     "chai": "*",
-    "browserify": "~2.27.1"
+    "browserify": "~2.27.1",
+    "mocha-phantomjs": "~3.1.1"
   },
   "jam": {
     "include": [
