--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "selectn",
   "author": "Wil Moore III <wil.moore@wilmoore.com>",
-  "description": "N-levels deep object access via dot/bracket-notation property access string.",
+  "description": "N-levels deep object access via dot/bracket-notation for Node.js and the browser.",
   "version": "0.9.0",
   "keywords": [
     "object",
