--- a/examples/stats/package.json
+++ b/examples/stats/package.json
@@ -5,5 +5,10 @@
   "main": "index.js",
   "private": true,
   "author": "Wil Moore III <wil.moore@wilmoore.com> (http://github.com/wilmoore)",
-  "license": "MIT"
+  "license": "MIT",
+  "dependencies": {
+    "selectn": "~0.9.6",
+    "lodash.values": "~2.4.1",
+    "lodash.max": "~2.4.1"
+  }
 }
