Remove unnecessary files from npm package

--- a/package.json
+++ b/package.json
@@ -12,6 +12,9 @@
     "predicate",
     "functor"
   ],
+  "files": [
+    "index.js"
+  ],
   "main": "./index",
   "browser": "./index.js",
   "repository": {
