--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,11 @@
 language: node_js
 node_js:
-  - 0.8
-  - 0.9
   - 0.10
+  - 0.11
+  - 0.12
+  - iojs-v1.0.4
+  - iojs-v2.0.2
+  - iojs-v3.0.0
 branches:
   only:
     - master
