drop .npmignore in favor of files array in package.json

--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "index.js",
     "license",
     "package.json",
-    "readme.md"
+    "readme.md",
+    "selectn.js"
   ],
   "homepage": "https://github.com/wilmoore/selectn.js",
   "keywords": [
