Fixed #24 (Test when value is 'null')
- Fixed #24 (Test when value is 'null'): https://github.com/wilmoore/selectn.js/issues/24#issuecomment-179119054
- Updated bower.json including dropping of deprecated key/values (i.e. version).

--- a/bower.json
+++ b/bower.json
@@ -1,10 +1,70 @@
 {
   "name": "selectn",
-  "main": "selectn.js",
-  "version": "0.9.6",
-  "homepage": "https://github.com/wilmoore/selectn",
+  "description": "Curried property accessor function that resolves deeply-nested object properties via dot/bracket-notation string path while mitigating TypeErrors via friendly and composable API.",
+  "main": "index.js",
   "authors": [
     "Wil Moore III <wil.moore@wilmoore.com>"
   ],
-  "license": "MIT"
+  "license": "MIT",
+  "keywords": [
+    "Mitigate",
+    "TypeError",
+    "TypeError",
+    "access",
+    "accessor",
+    "bracket-notation",
+    "string",
+    "path",
+    "browser",
+    "callback",
+    "composable",
+    "compatible",
+    "curried",
+    "curry",
+    "deep",
+    "dot-notation",
+    "string",
+    "path",
+    "dot/bracket-notation",
+    "dot/bracket-notation",
+    "string",
+    "path",
+    "dref",
+    "es3",
+    "es3",
+    "compatible",
+    "functional",
+    "functor",
+    "higher-order",
+    "nested",
+    "object",
+    "parameter",
+    "order",
+    "path-lookup",
+    "pathval",
+    "pointfree",
+    "predicate",
+    "property",
+    "property",
+    "access",
+    "property",
+    "accessor",
+    "reach",
+    "string",
+    "path",
+    "to-function"
+  ],
+  "homepage": "https://www.npmjs.com/package/selectn",
+  "moduleType": [
+    "amd",
+    "globals",
+    "node"
+  ],
+  "ignore": [
+    "**/.*",
+    "node_modules",
+    "bower_components",
+    "test",
+    "tests"
+  ]
 }
