Add example of support for keys containing `.` (array path).

--- a/bower.json
+++ b/bower.json
@@ -7,9 +7,9 @@
   ],
   "license": "MIT",
   "keywords": [
-    "Mitigate",
+    "Mitigate TypeError",
     "TypeError",
-    "TypeError",
+    "TypeErrors",
     "access",
     "accessor",
     "bracket-notation",
