Add debug and update .zuul.yml
- Add `debug` logging.
- Update `.zuul.yml` to test only firefox versions `44..46` instead of just latest.

--- a/.zuul.yml
+++ b/.zuul.yml
@@ -1,12 +1,13 @@
 ui: tape
+concurrency: 3
 browsers:
   - name: android
     version: latest
   - name: chrome
-    version: latest
-  - name: firefox
-    version: latest
+    version: 49..latest
   - name: ie
     version: 9..latest
+  - name: firefox
+    version: 44..46
   - name: safari
-    version: latest
+    version: 6..latest
