--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "dependencies": {
     "brackets2dots": "^1.1.0",
     "curry2": "^1.0.0",
+    "debug": "^2.2.0",
     "dotsplit.js": "^1.0.3"
   },
   "devDependencies": {
@@ -20,7 +21,7 @@
     "tape": "^4.0.0",
     "tape-catch": "^1.0.4",
     "uglify-js": "^2.6.1",
-    "zuul": "^3.9.0"
+    "zuul": "^3.10.1"
   },
   "homepage": "https://github.com/wilmoore/selectn.js",
   "keywords": [
