add `postversion` npm script

--- a/package.json
+++ b/package.json
@@ -76,9 +76,7 @@
     "build": "browserify-standalone && uglifyjs $npm_package_name.js > $npm_package_name.min.js",
     "fixpack": "fixpack",
     "prepublish": "npm run build",
-    "release-major": "npm version major && git push --follow-tags && npm publish",
-    "release-minor": "npm version minor && git push --follow-tags && npm publish",
-    "release-patch": "npm version patch && git push --follow-tags && npm publish",
+    "postversion": "git push --follow-tags && npm publish",
     "standard": "standard",
     "test": "npm run dependency-check && npm run standard --silent && node test.js | tap-spec",
     "test:browsers": "zuul -- test.js",
